# voiceType

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  build_windows.bat  build_windows.py  commands.txt  docker-compose.yaml  environment.yaml  flake.nix  main.py  pi-mono-local-llm-setup.md  progress.md  pyproject.toml  scratch_listener.py  scratch_type_text.py  settings.example.toml  settings.toml  spec.md  test_listen_and_type.py  voicetype-user-service.nix  voicetype.spec
.github/workflows/: release.yaml  test.yaml  tests.yaml
build_scripts/: README.md  build_windows.py
build_scripts/windows/: installer.nsi
docs/: ARCHITECTURE.md  BUILDING.md  PIPELINE_COMPLETE.md  STREAMING_STT.md  WAYLAND_GLOBAL_SHORTCUTS.md  pipeline_implementation_status.md  pipeline_integration_example.py  pipeline_spec.md  pipeline_spec_review.md  pipeline_spec_review.old.md
experiments/: clipboard_paste_typing.py  gdbus_paste_typing.py  locking_issues_demo.py  pystray_tutorial.py  scratch_hotkey_listener.py  scratch_listener.py  scratch_thread_communication.py  scratch_type_text.py  test_cuda_versions.py  test_evdev_direct.py  test_portal_rebind.py  test_transcribe.py
experiments/libei-test/: .gitignore  HANDOFF.md  NOTES.md  README-READ_TO_SEE_WHERE_LEFTOFF.md  libei_ctypes.py  pyproject.toml  test_single_key.py  type_sentence.py  type_sentence_ctypes.py  type_sentence_dbus.py  type_sentence_fast.py  type_sentence_persistent.py  type_sentence_production.py  type_sentence_xkb.py
experiments/libei-test/.claude/: settings.local.json
experiments/libei-test/scripts/: activate.sh
experiments/litellm-demo/: README.md  litellm_local_demo.py
experiments/litellm-ollama-test/: test_ollama.py
experiments/pystray_tutorials/: dynamic_menu_minimal.py  full_pystray_tutorial.py
experiments/whispercpp-experiment/: PIXI_ENVIRONMENTS.md  QUICKSTART_CPU.md  README.md  WHISPER_BACKENDS.md  jumping-jacks-champion.flac  pixi.toml  test_whisper_backends.py  test_whisper_optimization.py  whisper_config_examples.toml
research/: handy-analysis.md
scripts/: analyze_traces.py  convert_traces_to_jaeger.py  portal_timing_diagnostic.py  run-linux.sh
tests/: conftest.py  test_correct_typos.py  test_integration.py  test_llm_agent.py  test_pipeline_infrastructure.py  test_pipeline_manager.py  test_platform_detection.py  test_portal_hotkey_listener.py  test_settings.py  test_strip_trailing_ellipsis.py  test_transcribe_config.py  test_transcribe_cuda.py  test_transcribe_keep_loaded.py  test_trayicon_openers.py  test_trayicon_traces.py
voicetype/: __main__.py  app.py  app_context.py  globals.py  hotkey.py  hotkey_listener.py  install.py  linux_x11_hotkey_listener.py  platform_detection.py  settings.py  state.py  telemetry.py  trayicon.py  utils.py
voicetype/assets/: io.github.voicetype.VoiceType.desktop
voicetype/audio_capture/: __init__.py  audio_capture.py
voicetype/hotkey_listener/: __init__.py  evdev_listener.py  hotkey_listener.py  linux_wayland_hotkey_listener.py  linux_x11_hotkey_listener.py  portal_hotkey_listener.py  privileged_listener.py  privileged_service.py  pynput_hotkey_listener.py  socket_listener.py
voicetype/pipeline/: README.md  __init__.py  context.py  hotkey_dispatcher.py  hotkey_manager.py  pipeline_executor.py  pipeline_manager.py  resource_manager.py  stage_registry.py
voicetype/pipeline/stages/: __init__.py  correct_typos.py  llm_agent.py  record_audio.py  run_command.py  streaming_stt.py  strip_trailing_ellipsis.py  transcribe.py  type_text.py
voicetype/pipeline/stages/keyboard_backends/: __init__.py  base.py  eitype_backend.py  pynput_backend.py  wtype_backend.py
voicetype/scripts/: __init__.py  run_linux.py
voicetype/sounds/: __init__.py
voicetype/voice/: voice.py
