[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "voicetype"
]
exclude = [
    "voicetype/_vendor/pynput/setup.py",
    "voicetype/_vendor/pynput/docs/**",
    "voicetype/_vendor/pynput/tests/**",
    "voicetype/_vendor/pynput/tools/**"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "voicetype/_version.py"

[project]
name = "voiceType2"
description = "Type with your voice using hotkey-activated speech recognition"
readme = "README.md"
authors = [{ name = "Adam Lewis" }]
license = "Apache-2.0"
license-files = [
    "LICENSE",
    "voicetype/_vendor/pynput/COPYING.LGPL",
]
requires-python = ">=3.11"
keywords = ["speech-recognition", "voice-typing", "accessibility", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
dynamic = ["version"]

[project.scripts]
voicetype = "voicetype.install:main"
run-voicetype = "voicetype.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
]
wayland = [
    "dbus-next>=0.2.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["experiments", ".git", ".pixi", "build", "dist"]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = [
    "I",
]
ignore = [
    "E501",   # Ignore line too long, because due to black the error can only occur for strings
    "D100",   # Ignore missing docstring in public module
    "BLE001", # Ignore bare except
    "EM101",
    "PTH110",
    "TRY003",
    "C901",
    "PLR0915", # Ignore too many statements in function
]

[tool.typos]
default.extend-ignore-re = ["(?Rm)^.*(#|//)\\s*typos: ignore$"]

[tool.pixi.workspace]
channels = ["conda-forge", "nvidia"]
platforms = ["linux-64", "win-64", "osx-64"]

[tool.pixi.dependencies]
# conda-forge dependencies
python = ">=3.11, <3.14"  # some deps didn't support 3.14 yet, but otherwise we should be good to go
gtk3 = "*"
gobject-introspection = "*"
pygobject = "*"
loguru = ">=0.7.3,<0.8"
litellm = ">=1.75"

[tool.pixi.pypi-dependencies]
# "pyaudio",  # was causing me problems with audio
loguru = "*"
pystray = "*"
prompt_toolkit = "*"
pydub = "*"  # for sound
audioop-lts = "*"  # for pydub compatibility with Python 3.13+ # necessary until https://github.com/jiaaro/pydub/pull/816 merged into pydub
playsound3 = "*" # for sound
soundfile = "*"  # for sound recording
sounddevice = "*"  # for detecting input devices and recording sound
pydantic-settings = "*"
toml = "*"

# OpenTelemetry for tracing and observability
opentelemetry-api = "*"
opentelemetry-sdk = "*"
opentelemetry-exporter-otlp = "*"
opentelemetry-instrumentation = "*"

# the following dependencies come from vendoring in pynput
six = "*"

# Define the 'local' feature
[tool.pixi.feature.local]
channels = ["conda-forge"]

# PyPI packages for this feature
[tool.pixi.feature.local.pypi-dependencies]
voiceType2 = { path = ".", editable = true }
faster-whisper = "*"

# Conda packages common across all platforms
[tool.pixi.feature.local.dependencies]

# Platform-scoped dependencies
[tool.pixi.target.osx-64.pypi-dependencies]
# the following dependencies come from vendoring in pynput
pyobjc-framework-ApplicationServices = ">=8.0"
pyobjc-framework-Quartz = ">=8.0"

[tool.pixi.target.linux-64.pypi-dependencies]
dbus-next = ">=0.2.3"  # Wayland GlobalShortcuts portal support
# the following dependencies come from vendoring in pynput
evdev = ">=1.3"
python-xlib = ">=0.17"

[tool.pixi.feature.local.target.linux-64.dependencies]

libcublas = "=12"  # faster_whisper doesn't seem to support cuda 13 yet
cudnn = "*"

# Windows-specific dependencies
[tool.pixi.feature.local.target.win-64.dependencies]
libcublas = "=12"
cudnn = "*"

# Define the 'local-cpu' feature for non-GPU machines
[tool.pixi.feature.local-cpu]
channels = ["conda-forge"]

# PyPI packages for this feature
[tool.pixi.feature.local-cpu.pypi-dependencies]
voiceType2 = { path = ".", editable = true }
faster-whisper = "*"

# Conda packages common across all platforms
[tool.pixi.feature.local-cpu.dependencies]


# Define the 'build' feature for Python package building
[tool.pixi.feature.build]
channels = ["conda-forge"]

# Conda packages for the build feature
[tool.pixi.feature.build.dependencies]
python = ">=3.11"
hatch = "*"
hatch-vcs = "*"

# Define the 'windows-build' feature for creating Windows installers
[tool.pixi.feature.windows-build]
channels = ["conda-forge"]

# PyPI packages for Windows build
[tool.pixi.feature.windows-build.pypi-dependencies]
voiceType2 = { path = ".", editable = true }
faster-whisper = "*"  # CPU-only for smaller bundle
pyinstaller = "*"     # For creating standalone executables

# Windows-specific build dependencies
[tool.pixi.feature.windows-build.target.win-64.dependencies]
nsis = "*"

# Define the 'dev' feature
[tool.pixi.feature.dev]
channels = ["conda-forge"]

# PyPI packages for the dev feature
[tool.pixi.feature.dev.pypi-dependencies]
voiceType2 = { path = ".", editable = true }
faster-whisper = "*"

# Conda packages for the dev feature
[tool.pixi.feature.dev.dependencies]
pre-commit = "*"
pytest = "*"

# Linux-specific dev dependencies
[tool.pixi.feature.dev.target.linux-64.dependencies]
libcublas = "=12"  # faster_whisper doesn't seem to support cuda 13 yet
cudnn = "*"

# Map environments to feature sets
[tool.pixi.environments]
default = ["local"]
local = ["local"]
local-cpu = ["local-cpu"]  # For non-GPU machines
build = ["build"]
dev = ["dev"]
windows-build = ["windows-build"]  # For building Windows installers

# Pixi tasks for building
[tool.pixi.feature.windows-build.tasks]
# Build Windows installer (PyInstaller + NSIS)
build-windows = { cmd = "python build_scripts/build_windows.py --clean", description = "Build Windows installer with PyInstaller + NSIS" }
build-exe = { cmd = "pyinstaller --clean voicetype.spec", description = "Build standalone exe with PyInstaller only" }
clean-build = { cmd = "python -c \"import shutil; from pathlib import Path; [shutil.rmtree(p) for p in [Path('dist'), Path('build')] if p.exists()]\"", description = "Clean build artifacts" }
