[project]
name = "libei-test"
version = "0.1.0"
description = "Sample program to type a sentence using libei on Wayland"
requires-python = ">=3.11"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.11, <3.14"
dbus-python = ">=1.3"
gtk3 = "*"
gobject-introspection = "*"
pygobject = "*"

[tool.pixi.pypi-dependencies]
# snegg provides Python bindings to libei, libeis, and liboeffis
snegg = { git = "https://gitlab.freedesktop.org/libinput/snegg.git" }

[tool.pixi.activation]
scripts = ["scripts/activate.sh"]
